configuration/src/cal/CalParser.java
// $ANTLR 3.1.2 D:\\repositories\\mwipliez\\graphiti-editor\\configuration\\src\\cal\\Cal.g 2009-03-30 13:59:22

import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;


import org.antlr.runtime.tree.*;

public class CalParser extends Parser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "Expression", "Integer", "String", "Operator", "Var", "Parameter", "Type", "TypeAttr", "TypePar", "ACTOR", "ID", "LBRACKET", "RBRACKET", "LPAREN", "RPAREN", "DOUBLE_EQUAL_ARROW", "COLON", "ALL", "IMPORT", "MULTI", "ARROW", "CARET", "COLON_EQUAL", "COMMA", "DIV", "DOT", "DOUBLE_DASH_ARROW", "DOUBLE_DOT", "DOUBLE_COLON", "EQ", "GE", "GT", "LBRACE", "LE", "LT", "MINUS", "NUMBER", "PLUS", "RBRACE", "SEMICOLON", "SHARP", "STRING", "TIMES", "LINE_COMMENT", "MULTI_LINE_COMMENT", "WHITESPACE", "NE"
    };
    public static final int LT=38;
    public static final int Operator=7;
    public static final int LBRACE=36;
    public static final int MULTI=23;
    public static final int ID=14;
    public static final int EOF=-1;
    public static final int DOUBLE_DOT=31;
    public static final int LPAREN=17;
    public static final int LBRACKET=15;
    public static final int RPAREN=18;
    public static final int IMPORT=22;
    public static final int COLON_EQUAL=26;
    public static final int COMMA=27;
    public static final int ALL=21;
    public static final int CARET=25;
    public static final int TypeAttr=11;
    public static final int PLUS=41;
    public static final int String=6;
    public static final int RBRACKET=16;
    public static final int EQ=33;
    public static final int DOT=29;
    public static final int NE=50;
    public static final int DOUBLE_EQUAL_ARROW=19;
    public static final int DOUBLE_DASH_ARROW=30;
    public static final int GE=34;
    public static final int SHARP=44;
    public static final int Type=10;
    public static final int RBRACE=42;
    public static final int LINE_COMMENT=47;
    public static final int NUMBER=40;
    public static final int WHITESPACE=49;
    public static final int SEMICOLON=43;
    public static final int MINUS=39;
    public static final int Expression=4;
    public static final int MULTI_LINE_COMMENT=48;
    public static final int Parameter=9;
    public static final int TypePar=12;
    public static final int COLON=20;
    public static final int DOUBLE_COLON=32;
    public static final int ACTOR=13;
    public static final int ARROW=24;
    public static final int GT=35;
    public static final int DIV=28;
    public static final int TIMES=46;
    public static final int Var=8;
    public static final int Integer=5;
    public static final int LE=37;
    public static final int STRING=45;

    // delegates
    // delegators


        public CalParser(TokenStream input) {
            this(input, new RecognizerSharedState());
        }
        public CalParser(TokenStream input, RecognizerSharedState state) {
            super(input, state);
             
        }
        
    protected TreeAdaptor adaptor = new CommonTreeAdaptor();

    public void setTreeAdaptor(TreeAdaptor adaptor) {
        this.adaptor = adaptor;
    }
    public TreeAdaptor getTreeAdaptor() {
        return adaptor;
    }

    public String[] getTokenNames() { return CalParser.tokenNames; }
    public String getGrammarFileName() { return "D:\\repositories\\mwipliez\\graphiti-editor\\configuration\\src\\cal\\Cal.g"; }


    public static class actor_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "actor"
    // D:\\repositories\\mwipliez\\graphiti-editor\\configuration\\src\\cal\\Cal.g:49:1: actor : ( oneImport )* ACTOR ID ( LBRACKET ( typePars )? RBRACKET )? LPAREN ( parameters )? RPAREN ( portDecls )? DOUBLE_EQUAL_ARROW ( portDecls )? COLON ( ignore )* EOF ;
    public final CalParser.actor_return actor() throws RecognitionException {
        CalParser.actor_return retval = new CalParser.actor_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        Token ACTOR2=null;
        Token ID3=null;
        Token LBRACKET4=null;
        Token RBRACKET6=null;
        Token LPAREN7=null;
        Token RPAREN9=null;
        Token DOUBLE_EQUAL_ARROW11=null;
        Token COLON13=null;
        Token EOF15=null;
        CalParser.oneImport_return oneImport1 = null;

        CalParser.typePars_return typePars5 = null;

        CalParser.parameters_return parameters8 = null;

        CalParser.portDecls_return portDecls10 = null;

        CalParser.portDecls_return portDecls12 = null;

        CalParser.ignore_return ignore14 = null;


        Object ACTOR2_tree=null;
        Object ID3_tree=null;
        Object LBRACKET4_tree=null;
        Object RBRACKET6_tree=null;
        Object LPAREN7_tree=null;
        Object RPAREN9_tree=null;
        Object DOUBLE_EQUAL_ARROW11_tree=null;
        Object COLON13_tree=null;
        Object EOF15_tree=null;

        try {
            // D:\\repositories\\mwipliez\\graphiti-editor\\configuration\\src\\cal\\Cal.g:49:6: ( ( oneImport )* ACTOR ID ( LBRACKET ( typePars )? RBRACKET )? LPAREN ( parameters )? RPAREN ( portDecls )? DOUBLE_EQUAL_ARROW ( portDecls )? COLON ( ignore )* EOF )
            // D:\\repositories\\mwipliez\\graphiti-editor\\configuration\\src\\cal\\Cal.g:49:8: ( oneImport )* ACTOR ID ( LBRACKET ( typePars )? RBRACKET )? LPAREN ( parameters )? RPAREN ( portDecls )? DOUBLE_EQUAL_ARROW ( portDecls )? COLON ( ignore )* EOF
            {
            root_0 = (Object)adaptor.nil();

            // D:\\repositories\\mwipliez\\graphiti-editor\\configuration\\src\\cal\\Cal.g:49:8: ( oneImport )*
            loop1:
            do {
                int alt1=2;
                int LA1_0 = input.LA(1);

                if ( (LA1_0==IMPORT) ) {
                    alt1=1;
                }


                switch (alt1) {
            	case 1 :
            	    // D:\\repositories\\mwipliez\\graphiti-editor\\configuration\\src\\cal\\Cal.g:49:8: oneImport
            	    {
            	    pushFollow(FOLLOW_oneImport_in_actor83);
            	    oneImport1=oneImport();

            	    state._fsp--;

            	    adaptor.addChild(root_0, oneImport1.getTree());

            	    }
            	    break;

            	default :
            	    break loop1;
                }
            } while (true);

            ACTOR2=(Token)match(input,ACTOR,FOLLOW_ACTOR_in_actor86); 
            ACTOR2_tree = (Object)adaptor.create(ACTOR2);
            adaptor.addChild(root_0, ACTOR2_tree);

            ID3=(Token)match(input,ID,FOLLOW_ID_in_actor88); 
            ID3_tree = (Object)adaptor.create(ID3);
            adaptor.addChild(root_0, ID3_tree);

            // D:\\repositories\\mwipliez\\graphiti-editor\\configuration\\src\\cal\\Cal.g:50:3: ( LBRACKET ( typePars )? RBRACKET )?
            int alt3=2;
            int LA3_0 = input.LA(1);

            if ( (LA3_0==LBRACKET) ) {
                alt3=1;
            }
            switch (alt3) {
                case 1 :
                    // D:\\repositories\\mwipliez\\graphiti-editor\\configuration\\src\\cal\\Cal.g:50:4: LBRACKET ( typePars )? RBRACKET
                    {
                    LBRACKET4=(Token)match(input,LBRACKET,FOLLOW_LBRACKET_in_actor93); 
                    LBRACKET4_tree = (Object)adaptor.create(LBRACKET4);
                    adaptor.addChild(root_0, LBRACKET4_tree);

                    // D:\\repositories\\mwipliez\\graphiti-editor\\configuration\\src\\cal\\Cal.g:50:13: ( typePars )?
                    int alt2=2;
                    int LA2_0 = input.LA(1);

                    if ( (LA2_0==ID) ) {
                        alt2=1;
                    }
                    switch (alt2) {
                        case 1 :
                            // D:\\repositories\\mwipliez\\graphiti-editor\\configuration\\src\\cal\\Cal.g:50:13: typePars
                            {
                            pushFollow(FOLLOW_typePars_in_actor95);
                            typePars5=typePars();

                            state._fsp--;

                            adaptor.addChild(root_0, typePars5.getTree());

                            }
                            break;

                    }

                    RBRACKET6=(Token)match(input,RBRACKET,FOLLOW_RBRACKET_in_actor98); 
                    RBRACKET6_tree = (Object)adaptor.create(RBRACKET6);
                    adaptor.addChild(root_0, RBRACKET6_tree);


                    }
                    break;

            }

            LPAREN7=(Token)match(input,LPAREN,FOLLOW_LPAREN_in_actor104); 
            LPAREN7_tree = (Object)adaptor.create(LPAREN7);
            adaptor.addChild(root_0, LPAREN7_tree);

            // D:\\repositories\\mwipliez\\graphiti-editor\\configuration\\src\\cal\\Cal.g:51:10: ( parameters )?
            int alt4=2;
            int LA4_0 = input.LA(1);

            if ( (LA4_0==ID) ) {
                alt4=1;
            }
            switch (alt4) {
                case 1 :
                    // D:\\repositories\\mwipliez\\graphiti-editor\\configuration\\src\\cal\\Cal.g:51:10: parameters
                    {
                    pushFollow(FOLLOW_parameters_in_actor106);
                    parameters8=parameters();

                    state._fsp--;

                    adaptor.addChild(root_0, parameters8.getTree());

                    }
                    break;

            }

            RPAREN9=(Token)match(input,RPAREN,FOLLOW_RPAREN_in_actor109); 
            RPAREN9_tree = (Object)adaptor.create(RPAREN9);
            adaptor.addChild(root_0, RPAREN9_tree);

            // D:\\repositories\\mwipliez\\graphiti-editor\\configuration\\src\\cal\\Cal.g:52:3: ( portDecls )?
            int alt5=2;
            int LA5_0 = input.LA(1);

            if ( (LA5_0==ID||LA5_0==MULTI) ) {
                alt5=1;
            }
            switch (alt5) {
                case 1 :
                    // D:\\repositories\\mwipliez\\graphiti-editor\\configuration\\src\\cal\\Cal.g:52:3: portDecls
                    {
                    pushFollow(FOLLOW_portDecls_in_actor113);
                    portDecls10=portDecls();

                    state._fsp--;

                    adaptor.addChild(root_0, portDecls10.getTree());

                    }
                    break;

            }

            DOUBLE_EQUAL_ARROW11=(Token)match(input,DOUBLE_EQUAL_ARROW,FOLLOW_DOUBLE_EQUAL_ARROW_in_actor116); 
            DOUBLE_EQUAL_ARROW11_tree = (Object)adaptor.create(DOUBLE_EQUAL_ARROW11);
            adaptor.addChild(root_0, DOUBLE_EQUAL_ARROW11_tree);

            // D:\\repositories\\mwipliez\\graphiti-editor\\configuration\\src\\cal\\Cal.g:52:33: ( portDecls )?
            int alt6=2;
            int LA6_0 = input.LA(1);

            if ( (LA6_0==ID||LA6_0==MULTI) ) {
                alt6=1;
            }
            switch (alt6) {
                case 1 :
                    // D:\\repositories\\mwipliez\\graphiti-editor\\configuration\\src\\cal\\Cal.g:52:33: portDecls
                    {
                    pushFollow(FOLLOW_portDecls_in_actor118);
                    portDecls12=portDecls();

                    state._fsp--;

                    adaptor.addChild(root_0, portDecls12.getTree());

                    }
                    break;

            }

            COLON13=(Token)match(input,COLON,FOLLOW_COLON_in_actor121); 
            COLON13_tree = (Object)adaptor.create(COLON13);
            adaptor.addChild(root_0, COLON13_tree);

            // D:\\repositories\\mwipliez\\graphiti-editor\\configuration\\src\\cal\\Cal.g:52:50: ( ignore )*
            loop7:
            do {
                int alt7=2;
                int LA7_0 = input.LA(1);

                if ( ((LA7_0>=ACTOR && LA7_0<=TIMES)) ) {
                    alt7=1;
                }


                switch (alt7) {
            	case 1 :
            	    // D:\\repositories\\mwipliez\\graphiti-editor\\configuration\\src\\cal\\Cal.g:52:50: ignore
            	    {
            	    pushFollow(FOLLOW_ignore_in_actor123);
            	    ignore14=ignore();

            	    state._fsp--;

            	    adaptor.addChild(root_0, ignore14.getTree());

            	    }
            	    break;

            	default :
            	    break loop7;
                }
            } while (true);

            EOF15=(Token)match(input,EOF,FOLLOW_EOF_in_actor126); 
            EOF15_tree = (Object)adaptor.create(EOF15);
            adaptor.addChild(root_0, EOF15_tree);


            }

            retval.stop = input.LT(-1);

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "actor"

    public static class ignore_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "ignore"
    // D:\\repositories\\mwipliez\\graphiti-editor\\configuration\\src\\cal\\Cal.g:54:1: ignore : ( ALL | ACTOR | IMPORT | MULTI | ARROW | CARET | COLON | COLON_EQUAL | COMMA | DIV | DOT | DOUBLE_DASH_ARROW | DOUBLE_EQUAL_ARROW | DOUBLE_DOT | DOUBLE_COLON | EQ | GE | GT | ID | LBRACE | LBRACKET | LPAREN | LE | LT | MINUS | NUMBER | PLUS | RBRACE | RBRACKET | RPAREN | SEMICOLON | SHARP | STRING | TIMES );
    public final CalParser.ignore_return ignore() throws RecognitionException {
        CalParser.ignore_return retval = new CalParser.ignore_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        Token set16=null;

        Object set16_tree=null;

        try {
            // D:\\repositories\\mwipliez\\graphiti-editor\\configuration\\src\\cal\\Cal.g:54:7: ( ALL | ACTOR | IMPORT | MULTI | ARROW | CARET | COLON | COLON_EQUAL | COMMA | DIV | DOT | DOUBLE_DASH_ARROW | DOUBLE_EQUAL_ARROW | DOUBLE_DOT | DOUBLE_COLON | EQ | GE | GT | ID | LBRACE | LBRACKET | LPAREN | LE | LT | MINUS | NUMBER | PLUS | RBRACE | RBRACKET | RPAREN | SEMICOLON | SHARP | STRING | TIMES )
            // D:\\repositories\\mwipliez\\graphiti-editor\\configuration\\src\\cal\\Cal.g:
            {
            root_0 = (Object)adaptor.nil();

            set16=(Token)input.LT(1);
            if ( (input.LA(1)>=ACTOR && input.LA(1)<=TIMES) ) {
                input.consume();
                adaptor.addChild(root_0, (Object)adaptor.create(set16));
                state.errorRecovery=false;
            }
            else {
                MismatchedSetException mse = new MismatchedSetException(null,input);
                throw mse;
            }


            }

            retval.stop = input.LT(-1);

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "ignore"

    public static class oneImport_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "oneImport"
    // D:\\repositories\\mwipliez\\graphiti-editor\\configuration\\src\\cal\\Cal.g:92:1: oneImport : IMPORT importRest SEMICOLON ;
    public final CalParser.oneImport_return oneImport() throws RecognitionException {
        CalParser.oneImport_return retval = new CalParser.oneImport_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        Token IMPORT17=null;
        Token SEMICOLON19=null;
        CalParser.importRest_return importRest18 = null;


        Object IMPORT17_tree=null;
        Object SEMICOLON19_tree=null;

        try {
            // D:\\repositories\\mwipliez\\graphiti-editor\\configuration\\src\\cal\\Cal.g:92:10: ( IMPORT importRest SEMICOLON )
            // D:\\repositories\\mwipliez\\graphiti-editor\\configuration\\src\\cal\\Cal.g:92:12: IMPORT importRest SEMICOLON
            {
            root_0 = (Object)adaptor.nil();

            IMPORT17=(Token)match(input,IMPORT,FOLLOW_IMPORT_in_oneImport276); 
            IMPORT17_tree = (Object)adaptor.create(IMPORT17);
            adaptor.addChild(root_0, IMPORT17_tree);

            pushFollow(FOLLOW_importRest_in_oneImport278);
            importRest18=importRest();

            state._fsp--;

            adaptor.addChild(root_0, importRest18.getTree());
            SEMICOLON19=(Token)match(input,SEMICOLON,FOLLOW_SEMICOLON_in_oneImport280); 
            SEMICOLON19_tree = (Object)adaptor.create(SEMICOLON19);
            adaptor.addChild(root_0, SEMICOLON19_tree);


            }

            retval.stop = input.LT(-1);

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "oneImport"

    public static class importRest_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "importRest"
    // D:\\repositories\\mwipliez\\graphiti-editor\\configuration\\src\\cal\\Cal.g:94:1: importRest : ( ALL qualifiedId | qualifiedId ( EQ ID )? );
    public final CalParser.importRest_return importRest() throws RecognitionException {
        CalParser.importRest_return retval = new CalParser.importRest_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        Token ALL20=null;
        Token EQ23=null;
        Token ID24=null;
        CalParser.qualifiedId_return qualifiedId21 = null;

        CalParser.qualifiedId_return qualifiedId22 = null;


        Object ALL20_tree=null;
        Object EQ23_tree=null;
        Object ID24_tree=null;

        try {
            // D:\\repositories\\mwipliez\\graphiti-editor\\configuration\\src\\cal\\Cal.g:94:11: ( ALL qualifiedId | qualifiedId ( EQ ID )? )
            int alt9=2;
            int LA9_0 = input.LA(1);

            if ( (LA9_0==ALL) ) {
                alt9=1;
            }
            else if ( (LA9_0==ID) ) {
                alt9=2;
            }
            else {
                NoViableAltException nvae =
                    new NoViableAltException("", 9, 0, input);

                throw nvae;
            }
            switch (alt9) {
                case 1 :
                    // D:\\repositories\\mwipliez\\graphiti-editor\\configuration\\src\\cal\\Cal.g:94:13: ALL qualifiedId
                    {
                    root_0 = (Object)adaptor.nil();

                    ALL20=(Token)match(input,ALL,FOLLOW_ALL_in_importRest288); 
                    ALL20_tree = (Object)adaptor.create(ALL20);
                    adaptor.addChild(root_0, ALL20_tree);

                    pushFollow(FOLLOW_qualifiedId_in_importRest290);
                    qualifiedId21=qualifiedId();

                    state._fsp--;

                    adaptor.addChild(root_0, qualifiedId21.getTree());

                    }
                    break;
                case 2 :
                    // D:\\repositories\\mwipliez\\graphiti-editor\\configuration\\src\\cal\\Cal.g:95:5: qualifiedId ( EQ ID )?
                    {
                    root_0 = (Object)adaptor.nil();

                    pushFollow(FOLLOW_qualifiedId_in_importRest296);
                    qualifiedId22=qualifiedId();

                    state._fsp--;

                    adaptor.addChild(root_0, qualifiedId22.getTree());
                    // D:\\repositories\\mwipliez\\graphiti-editor\\configuration\\src\\cal\\Cal.g:95:17: ( EQ ID )?
                    int alt8=2;
                    int LA8_0 = input.LA(1);

                    if ( (LA8_0==EQ) ) {
                        alt8=1;
                    }
                    switch (alt8) {
                        case 1 :
                            // D:\\repositories\\mwipliez\\graphiti-editor\\configuration\\src\\cal\\Cal.g:95:18: EQ ID
                            {
                            EQ23=(Token)match(input,EQ,FOLLOW_EQ_in_importRest299); 
                            EQ23_tree = (Object)adaptor.create(EQ23);
                            adaptor.addChild(root_0, EQ23_tree);

                            ID24=(Token)match(input,ID,FOLLOW_ID_in_importRest301); 
                            ID24_tree = (Object)adaptor.create(ID24);
                            adaptor.addChild(root_0, ID24_tree);


                            }
                            break;

                    }


                    }
                    break;

            }
            retval.stop = input.LT(-1);

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "importRest"

    public static class qualifiedId_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "qualifiedId"
    // D:\\repositories\\mwipliez\\graphiti-editor\\configuration\\src\\cal\\Cal.g:97:1: qualifiedId : ID ( DOT ID )+ ;
    public final CalParser.qualifiedId_return qualifiedId() throws RecognitionException {
        CalParser.qualifiedId_return retval = new CalParser.qualifiedId_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        Token ID25=null;
        Token DOT26=null;
        Token ID27=null;

        Object ID25_tree=null;
        Object DOT26_tree=null;
        Object ID27_tree=null;

        try {
            // D:\\repositories\\mwipliez\\graphiti-editor\\configuration\\src\\cal\\Cal.g:97:12: ( ID ( DOT ID )+ )
            // D:\\repositories\\mwipliez\\graphiti-editor\\configuration\\src\\cal\\Cal.g:97:14: ID ( DOT ID )+
            {
            root_0 = (Object)adaptor.nil();

            ID25=(Token)match(input,ID,FOLLOW_ID_in_qualifiedId311); 
            ID25_tree = (Object)adaptor.create(ID25);
            adaptor.addChild(root_0, ID25_tree);

            // D:\\repositories\\mwipliez\\graphiti-editor\\configuration\\src\\cal\\Cal.g:97:17: ( DOT ID )+
            int cnt10=0;
            loop10:
            do {
                int alt10=2;
                int LA10_0 = input.LA(1);

                if ( (LA10_0==DOT) ) {
                    alt10=1;
                }


                switch (alt10) {
            	case 1 :
            	    // D:\\repositories\\mwipliez\\graphiti-editor\\configuration\\src\\cal\\Cal.g:97:18: DOT ID
            	    {
            	    DOT26=(Token)match(input,DOT,FOLLOW_DOT_in_qualifiedId314); 
            	    DOT26_tree = (Object)adaptor.create(DOT26);
            	    adaptor.addChild(root_0, DOT26_tree);

            	    ID27=(Token)match(input,ID,FOLLOW_ID_in_qualifiedId316); 
            	    ID27_tree = (Object)adaptor.create(ID27);
            	    adaptor.addChild(root_0, ID27_tree);


            	    }
            	    break;

            	default :
            	    if ( cnt10 >= 1 ) break loop10;
                        EarlyExitException eee =
                            new EarlyExitException(10, input);
                        throw eee;
                }
                cnt10++;
            } while (true);


            }

            retval.stop = input.LT(-1);

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "qualifiedId"

    public static class parameter_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "parameter"
    // D:\\repositories\\mwipliez\\graphiti-editor\\configuration\\src\\cal\\Cal.g:102:1: parameter : ( type )? ID ( EQ expression )? ;
    public final CalParser.parameter_return parameter() throws RecognitionException {
        CalParser.parameter_return retval = new CalParser.parameter_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        Token ID29=null;
        Token EQ30=null;
        CalParser.type_return type28 = null;

        CalParser.expression_return expression31 = null;


        Object ID29_tree=null;
        Object EQ30_tree=null;

        try {
            // D:\\repositories\\mwipliez\\graphiti-editor\\configuration\\src\\cal\\Cal.g:102:10: ( ( type )? ID ( EQ expression )? )
            // D:\\repositories\\mwipliez\\graphiti-editor\\configuration\\src\\cal\\Cal.g:102:12: ( type )? ID ( EQ expression )?
            {
            root_0 = (Object)adaptor.nil();

            // D:\\repositories\\mwipliez\\graphiti-editor\\configuration\\src\\cal\\Cal.g:102:12: ( type )?
            int alt11=2;
            int LA11_0 = input.LA(1);

            if ( (LA11_0==ID) ) {
                int LA11_1 = input.LA(2);

                if ( ((LA11_1>=ID && LA11_1<=LBRACKET)||LA11_1==LPAREN) ) {
                    alt11=1;
                }
            }
            switch (alt11) {
                case 1 :
                    // D:\\repositories\\mwipliez\\graphiti-editor\\configuration\\src\\cal\\Cal.g:102:12: type
                    {
                    pushFollow(FOLLOW_type_in_parameter329);
                    type28=type();

                    state._fsp--;

                    adaptor.addChild(root_0, type28.getTree());

                    }
                    break;

            }

            ID29=(Token)match(input,ID,FOLLOW_ID_in_parameter332); 
            ID29_tree = (Object)adaptor.create(ID29);
            adaptor.addChild(root_0, ID29_tree);

            // D:\\repositories\\mwipliez\\graphiti-editor\\configuration\\src\\cal\\Cal.g:102:21: ( EQ expression )?
            int alt12=2;
            int LA12_0 = input.LA(1);

            if ( (LA12_0==EQ) ) {
                alt12=1;
            }
            switch (alt12) {
                case 1 :
                    // D:\\repositories\\mwipliez\\graphiti-editor\\configuration\\src\\cal\\Cal.g:102:22: EQ expression
                    {
                    EQ30=(Token)match(input,EQ,FOLLOW_EQ_in_parameter335); 
                    EQ30_tree = (Object)adaptor.create(EQ30);
                    adaptor.addChild(root_0, EQ30_tree);

                    pushFollow(FOLLOW_expression_in_parameter337);
                    expression31=expression();

                    state._fsp--;

                    adaptor.addChild(root_0, expression31.getTree());

                    }
                    break;

            }


            }

            retval.stop = input.LT(-1);

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "parameter"

    public static class parameters_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "parameters"
    // D:\\repositories\\mwipliez\\graphiti-editor\\configuration\\src\\cal\\Cal.g:104:1: parameters : parameter ( COMMA parameter )* ;
    public final CalParser.parameters_return parameters() throws RecognitionException {
        CalParser.parameters_return retval = new CalParser.parameters_return();
        retval.start = input.LT(1);

        Object root_0 = null;

